/*
 * Copyright (c) 1998-2023 University Corporation for Atmospheric Research/Unidata
 * See LICENSE for license information.
 */

syntax = "proto3";

package ucar.gcdm;

import "ucar/gcdm/gcdm_netcdf.proto";

option java_package = "ucar.gcdm";
option java_outer_classname = "GcdmServerProto";

service Gcdm {
  rpc GetNetcdfHeader (HeaderRequest) returns (HeaderResponse) {}
  rpc GetNetcdfData (DataRequest) returns (stream DataResponse) {}
}
